@@ -4,7 +4,18 @@
  */
 package gov.noaa.pfel.coastwatch.griddata;
 
-import com.cohort.array.*;
+import com.cohort.array.Attributes;
+import com.cohort.array.CharArray;
+import com.cohort.array.DoubleArray;
+import com.cohort.array.FloatArray;
+import com.cohort.array.IntArray;
+import com.cohort.array.LongArray;
+import com.cohort.array.NDimensionalIndex;
+import com.cohort.array.PAType;
+import com.cohort.array.PrimitiveArray;
+import com.cohort.array.ShortArray;
+import com.cohort.array.StringArray;
+import com.cohort.array.ULongArray;
 import com.cohort.util.Calendar2;
 import com.cohort.util.File2;
 import com.cohort.util.Math2;
@@ -15,13 +26,28 @@ import java.io.StringWriter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.BitSet;
-import java.util.Iterator;
+import java.util.Collections;
 import java.util.List;
-import ucar.ma2.*;
-import ucar.nc2.*;
-import ucar.nc2.dataset.NetcdfDataset;
+import ucar.ma2.Array;
+import ucar.ma2.ArrayBoolean;
+import ucar.ma2.ArrayChar;
+import ucar.ma2.ArrayObject;
+import ucar.ma2.ArrayString;
+import ucar.ma2.DataType;
+import ucar.ma2.StructureData;
+import ucar.ma2.StructureDataIterator;
+import ucar.ma2.StructureMembers;
+import ucar.nc2.Attribute;
+import ucar.nc2.AttributeContainer;
+import ucar.nc2.Dimension;
+import ucar.nc2.Group;
+import ucar.nc2.NetcdfFile;
+import ucar.nc2.NetcdfFiles;
+import ucar.nc2.Structure;
+import ucar.nc2.Variable;
 import ucar.nc2.dataset.NetcdfDatasets;
-import ucar.nc2.write.*;
+import ucar.nc2.write.Ncdump;
+import ucar.nc2.write.NetcdfFormatWriter;
 
 /**
  * This class has some static convenience methods related to NetCDF files and the other Data
@@ -99,18 +125,11 @@ public class NcHelper {
    *     don't work.
    */
   public static String ncdump(String fileName, String cmd) throws Exception {
-    NetcdfFile nc = null;
-    try {
-      nc = openFile(fileName);
+    try (NetcdfFile nc = openFile(fileName)) {
       return ncdump(nc, cmd);
     } catch (Throwable t) {
       String2.log(MustBe.throwableToString(t));
       return "Unable to open file or file not .nc-compatible.";
-    } finally {
-      try {
-        nc.close();
-      } catch (Throwable t2) {
-      }
     }
   }
 
@@ -189,13 +208,13 @@ public class NcHelper {
       ArrayObject ao = ac.make1DStringArray();
       Object[] oa = (Object[]) ao.copyTo1DJavaArray();
       StringArray sa = new StringArray(oa.length, false);
-      for (int i = 0; i < oa.length; i++)
-        sa.add(oa[i] == null ? null : String2.fromJson(String2.trimEnd(oa[i].toString())));
+      for (Object o : oa)
+        sa.add(o == null ? null : String2.fromJson(String2.trimEnd(o.toString())));
       return sa;
     }
 
     // byte[] from ArrayBoolean.Dn
-    if (nc2Array instanceof ArrayBoolean ab) {
+    if (nc2Array instanceof ArrayBoolean) {
       boolean boolAr[] = (boolean[]) nc2Array.copyTo1DJavaArray();
       int n = boolAr.length;
       byte byteAr[] = new byte[n];
@@ -252,9 +271,9 @@ public class NcHelper {
    * @param dim
    * @return the Variable.Builder
    */
-  public static Variable.Builder addVariable(
+  public static Variable.Builder<?> addVariable(
       Group.Builder group, String shortName, DataType dataType, Dimension dim) {
-    return addVariable(group, shortName, dataType, Arrays.asList(dim));
+    return addVariable(group, shortName, dataType, Collections.singletonList(dim));
   }
 
   /**
@@ -266,10 +285,10 @@ public class NcHelper {
    * @param dims the list of dimensions
    * @return the Variable.Builder
    */
-  public static Variable.Builder addVariable(
+  public static Variable.Builder<?> addVariable(
       Group.Builder group, String shortName, DataType dataType, List<Dimension> dims) {
 
-    Variable.Builder varBuilder =
+    Variable.Builder<?> varBuilder =
         Variable.builder().setName(shortName).setDataType(dataType).addDimensions(dims);
     group.addVariable(varBuilder);
     return varBuilder;
@@ -284,16 +303,16 @@ public class NcHelper {
    * @param maxStringLength
    * @return the Variable.Builder
    */
-  public static Variable.Builder addNc3StringVariable(
+  public static Variable.Builder<?> addNc3StringVariable(
       Group.Builder group, String shortName, List<Dimension> dims, int maxStringLength) {
 
     // add a dimension for stringLength
     Dimension dim = new Dimension(shortName + StringLengthSuffix, maxStringLength);
     group.addDimension(dim);
-    ArrayList<Dimension> al = new ArrayList(dims);
+    ArrayList<Dimension> al = new ArrayList<>(dims);
     al.add(dim);
 
-    Variable.Builder varBuilder =
+    Variable.Builder<?> varBuilder =
         Variable.builder().setName(shortName).setDataType(DataType.CHAR).addDimensions(al);
     group.addVariable(varBuilder);
     return varBuilder;
@@ -373,10 +392,9 @@ public class NcHelper {
       ar = get1DArray(pa.toObjectArray(), false); // 2020-04-10 attributes in nc3 can't be unsigned
     else ar = get1DArray(pa);
 
-    Attribute att = Attribute.builder().setName(name).setValues(ar).build();
     // String2.log(">> NcHelper.newAttribute(" + name + ", " + pa.elementType() + ", " + pa + ") ->
     // " + att.toString());
-    return att;
+    return Attribute.builder().setName(name).setValues(ar).build();
   }
 
   /** This makes an ArrayString.D1 for use with netcdf-4. */
@@ -451,10 +469,10 @@ public class NcHelper {
       // make ArrayChar.D2
       // String2.log("NcHelper.get1DArray sar=" + String2.toCSSVString(sar));
       int max = 1; // nc wants at least 1
-      for (int i = 0; i < sar.length; i++) {
+      for (String s : sar) {
         // if (sar[i].length() > max) String2.log("new max=" + sar[i].length() + " s=\"" + sar[i] +
         // "\"");
-        max = Math.max(max, sar[i].length());
+        max = Math.max(max, s.length());
       }
       // String2.log("NcHelper.get1DArray String[] max=" + max);
       ArrayChar.D2 ac = new ArrayChar.D2(sar.length, max);
@@ -491,8 +509,7 @@ public class NcHelper {
     if (!dt.isIntegral()) return false;
     if (dt.isUnsigned()) return true; // vars in nc4 files return correct isUnsigned status
     PrimitiveArray pa = getVariableAttribute(variable, "_Unsigned");
-    if (pa != null && "true".equals(pa.toString())) return true;
-    return false;
+    return pa != null && "true".equals(pa.toString());
   }
 
   /**
@@ -537,8 +554,7 @@ public class NcHelper {
       ArrayObject ao = na.make1DStringArray();
       Object[] oa = (Object[]) ao.copyTo1DJavaArray();
       StringArray sa = new StringArray(oa.length, false);
-      for (int i = 0; i < oa.length; i++)
-        sa.add(oa[i] == null ? null : String2.trimEnd(oa[i].toString()));
+      for (Object o : oa) sa.add(o == null ? null : String2.trimEnd(o.toString()));
       return sa;
     }
 
@@ -699,53 +715,6 @@ public class NcHelper {
   }
 
   /**
-   * From an arrayList which alternates attributeName (a String) and attributeValue (an object),
-   * this generates a String with startLine+"<name>=<value>" on each line. If arrayList == null,
-   * this returns startLine+"[null]\n".
-   *
-   * <p>This nc version is used to print netcdf header attributes. It puts quotes around String
-   * attributeValues, converts \ to \\, and " to \", and appends 'f' to float values/
-   *
-   * @param arrayList
-   * @return the desired string representation
-   */
-  public static String alternateToString(String prefix, ArrayList arrayList, String suffix) {
-    if (arrayList == null) return prefix + "[null]\n";
-    StringBuilder sb = new StringBuilder();
-    for (int index = 0; index < arrayList.size(); index += 2) {
-      sb.append(prefix);
-      sb.append(arrayList.get(index).toString());
-      sb.append(" = ");
-      Object o = arrayList.get(index + 1);
-      if (o instanceof StringArray sa) {
-        int n = sa.size();
-        String connect = "";
-        for (int i = 0; i < n; i++) {
-          sb.append(connect);
-          connect = ", ";
-          String s = String2.replaceAll(sa.get(i), "\\", "\\\\"); //  \ becomes \\
-          s = String2.replaceAll(s, "\"", "\\\""); //  " becomes \"
-          sb.append("\"" + s + "\"");
-        }
-      } else if (o instanceof FloatArray fa) {
-        int n = fa.size();
-        String connect = "";
-        for (int i = 0; i < n; i++) {
-          sb.append(connect);
-          connect = ", ";
-          sb.append(fa.get(i));
-          sb.append("f");
-        }
-      } else {
-        sb.append(o.toString());
-      }
-      sb.append(suffix);
-      sb.append('\n');
-    }
-    return sb.toString();
-  }
-
-  /**
    * This gets a string representation of the header of a .nc file.
    *
    * <p>If the fullName is an http address, the name needs to start with "http:\\" (upper or lower
@@ -759,30 +728,11 @@ public class NcHelper {
   public static String readCDL(String fullName) throws Exception {
 
     // get information
-    NetcdfFile netcdfFile = openFile(fullName);
-    try {
+    try (NetcdfFile netcdfFile = openFile(fullName)) {
       String results = netcdfFile.toString();
       return String2.replaceAll(results, "\r", ""); // 2013-09-03 netcdf-java 4.3 started using \r\n
-
-    } finally {
-      try {
-        netcdfFile.close(); // make sure it is explicitly closed
-      } catch (Exception e2) {
-      }
     }
-  }
-
-  /** THIS IS IMPERFECT/UNFINISHED. This generates a .dds-like list of variables in a .nc file. */
-  public static String dds(String fileName) throws Exception {
-    String sar[] = String2.splitNoTrim(readCDL(fileName), '\n');
-    int n = sar.length;
-    StringBuilder sb = new StringBuilder();
-    for (int i = 0; i < n; i++) {
-      String trimS = sar[i].trim();
-      if (trimS.length() > 0 && !trimS.startsWith(":")) sb.append(sar[i] + "\n");
-      sar[i] = null;
-    }
-    return sb.toString();
+    // make sure it is explicitly closed
   }
 
   /**
@@ -814,7 +764,7 @@ public class NcHelper {
    * @return a Variable[] (or null if list is null)
    */
   public static Variable[] variableListToArray(List<Variable> list) {
-    return (Variable[]) (list == null ? null : list.toArray(new Variable[0]));
+    return list == null ? null : list.toArray(new Variable[0]);
   }
 
   /**
@@ -824,7 +774,7 @@ public class NcHelper {
    * @return a Dimensione[] (or null if list is null)
    */
   public static Dimension[] dimensionListToArray(List<Dimension> list) {
-    return (Dimension[]) (list == null ? null : list.toArray(new Dimension[0]));
+    return list == null ? null : list.toArray(new Dimension[0]);
   }
 
   /**
@@ -838,12 +788,12 @@ public class NcHelper {
   public static Variable[] findVariables(NetcdfFile netcdfFile, String variableNames[]) {
     // just use the variable names
     if (variableNames != null) {
-      ArrayList<Variable> list = new ArrayList();
-      for (int i = 0; i < variableNames.length; i++) {
-        Variable variable = netcdfFile.findVariable(variableNames[i]);
+      ArrayList<Variable> list = new ArrayList<>();
+      for (String variableName : variableNames) {
+        Variable variable = netcdfFile.findVariable(variableName);
         Test.ensureNotNull(
             variable,
-            String2.ERROR + " in NcHelper.findVariables: '" + variableNames[i] + "' not found.");
+            String2.ERROR + " in NcHelper.findVariables: '" + variableName + "' not found.");
         list.add(variable);
       }
       return variableListToArray(list);
@@ -854,8 +804,8 @@ public class NcHelper {
     Group rootGroup = netcdfFile.getRootGroup();
     List<Variable> rootGroupVariables = rootGroup.getVariables();
     // String2.log("rootGroup variables=" + String2.toNewlineString(rootGroupVariables.toArray()));
-    for (int v = 0; v < rootGroupVariables.size(); v++) {
-      if (rootGroupVariables.get(v) instanceof Structure structure) {
+    for (Variable groupVariable : rootGroupVariables) {
+      if (groupVariable instanceof Structure structure) {
         if (reallyVerbose) String2.log("    NcHelper.findVariables found a Structure.");
         return variableListToArray(structure.getVariables());
       }
@@ -880,13 +830,12 @@ public class NcHelper {
 
     // look for unlimited dimension
     if (mainDimension == null) {
-      List dimensions =
+      List<Dimension> dimensions =
           rootGroup.getDimensions(); // next nc version: getRootGroup().getDimensions();  //was
       // netcdfFile.getDimensions()
       if (dimensions.size() == 0)
         Test.error(String2.ERROR + " in NcHelper.findVariables: the file has no dimensions.");
-      for (int i = 0; i < dimensions.size(); i++) {
-        Dimension tDimension = (Dimension) dimensions.get(i);
+      for (Dimension tDimension : dimensions) {
         if (tDimension.isUnlimited()) {
           mainDimension = tDimension;
           if (reallyVerbose)
@@ -900,15 +849,14 @@ public class NcHelper {
 
     // look for a time variable (units contain " since ")
     if (mainDimension == null) {
-      for (int v = 0; v < rootGroupVariables.size(); v++) {
-        Variable variable = (Variable) rootGroupVariables.get(v);
-        List dimensions = variable.getDimensions();
-        PrimitiveArray units = getVariableAttribute(variable, "units");
+      for (Variable rootGroupVariable : rootGroupVariables) {
+        List<Dimension> dimensions = rootGroupVariable.getDimensions();
+        PrimitiveArray units = getVariableAttribute(rootGroupVariable, "units");
         if (units != null
             && units.size() > 0
             && Calendar2.isNumericTimeUnits(units.getString(0))
             && dimensions.size() > 0) {
-          mainDimension = (Dimension) dimensions.get(0);
+          mainDimension = dimensions.getFirst();
           if (reallyVerbose)
             String2.log(
                 "    NcHelper.findVariables found a time variable with dimension: "
@@ -922,10 +870,10 @@ public class NcHelper {
     // data variables)
     if (mainDimension == null) {
       for (int v = rootGroupVariables.size() - 1; v >= 0; v--) {
-        Variable variable = (Variable) rootGroupVariables.get(v);
-        List dimensions = variable.getDimensions();
+        Variable variable = rootGroupVariables.get(v);
+        List<Dimension> dimensions = variable.getDimensions();
         if (dimensions.size() > 0) {
-          mainDimension = (Dimension) dimensions.get(0);
+          mainDimension = dimensions.getFirst();
           if (reallyVerbose) {
             String fName = mainDimension.getName(); // the full name
             if (!"row".equals(fName)) // may be null
@@ -940,17 +888,16 @@ public class NcHelper {
     }
 
     // get a list of all variables which use just mainDimension
-    List structureVariables = new ArrayList();
-    for (int i = 0; i < rootGroupVariables.size(); i++) {
+    List<Variable> structureVariables = new ArrayList<>();
+    for (Variable tVariable : rootGroupVariables) {
       // if (reallyVerbose) String2.log("  get all variables which use mainDimension, check " + i);
-      Variable tVariable = (Variable) rootGroupVariables.get(i);
-      List tDimensions = tVariable.getDimensions();
+      List<Dimension> tDimensions = tVariable.getDimensions();
       int nDimensions = tDimensions.size();
       // if (reallyVerbose) String2.log("i=" + i + " name=" + tVariable.getFullName() +
       //    " type=" + tVariable.getNc3DataType());
-      if ((nDimensions == 1 && tDimensions.get(0).equals(mainDimension))
+      if ((nDimensions == 1 && tDimensions.getFirst().equals(mainDimension))
           || (nDimensions == 2
-              && tDimensions.get(0).equals(mainDimension)
+              && tDimensions.getFirst().equals(mainDimension)
               && tVariable.getDataType() == DataType.CHAR)) {
         structureVariables.add(tVariable);
       }
@@ -986,13 +933,12 @@ public class NcHelper {
       allVariables = netcdfFile.getVariables();
     }
     List<Variable> loadVariables = null;
-    for (int v = 0; v < allVariables.size(); v++) {
-      Variable variable = allVariables.get(v);
+    for (Variable variable : allVariables) {
       boolean isChar = variable.getDataType() == DataType.CHAR;
       int tnDim = variable.getRank() - (isChar ? 1 : 0);
       if (tnDim > dimNames.length) {
         // a new winner
-        loadVariables = new ArrayList();
+        loadVariables = new ArrayList<>();
         loadVariables.add(variable);
         dimNames = new String[tnDim];
         for (int d = 0; d < tnDim; d++) {
@@ -1038,10 +984,9 @@ public class NcHelper {
   public static Variable[] findAllVariablesWithDims(NetcdfFile netcdfFile) {
 
     Group rootGroup = netcdfFile.getRootGroup();
-    List rootGroupVariables = rootGroup.getVariables();
-    List loadVariables = new ArrayList();
-    for (int v = 0; v < rootGroupVariables.size(); v++) {
-      Variable variable = (Variable) rootGroupVariables.get(v);
+    List<Variable> rootGroupVariables = rootGroup.getVariables();
+    List<Variable> loadVariables = new ArrayList<>();
+    for (Variable variable : rootGroupVariables) {
       boolean isChar = variable.getDataType() == DataType.CHAR;
       int tnDim = variable.getRank() - (isChar ? 1 : 0);
       if (tnDim > 0) loadVariables.add(variable);
@@ -1061,12 +1006,12 @@ public class NcHelper {
   public static Variable[] find4DVariables(NetcdfFile netcdfFile, String variableNames[]) {
     // just use the variable names
     if (variableNames != null) {
-      ArrayList<Variable> list = new ArrayList();
-      for (int i = 0; i < variableNames.length; i++) {
-        Variable variable = netcdfFile.findVariable(variableNames[i]);
+      ArrayList<Variable> list = new ArrayList<>();
+      for (String variableName : variableNames) {
+        Variable variable = netcdfFile.findVariable(variableName);
         Test.ensureNotNull(
             variable,
-            String2.ERROR + " in NcHelper.find4DVariables: '" + variableNames[i] + "' not found.");
+            String2.ERROR + " in NcHelper.find4DVariables: '" + variableName + "' not found.");
         list.add(variable);
       }
       return variableListToArray(list);
@@ -1075,9 +1020,8 @@ public class NcHelper {
     // find a 4D variable among the variables in the rootGroup
     List<Variable> allVariables = netcdfFile.getVariables();
     String foundDimensionNames[] = null;
-    ArrayList<Variable> foundVariables = new ArrayList();
-    for (int v = 0; v < allVariables.size(); v++) {
-      Variable variable = allVariables.get(v);
+    ArrayList<Variable> foundVariables = new ArrayList<>();
+    for (Variable variable : allVariables) {
       List<Dimension> dimensions = variable.getDimensions();
 
       if ((dimensions.size() == 4 && variable.getDataType() != DataType.CHAR)
@@ -1129,8 +1073,7 @@ public class NcHelper {
   public static void setAttributes(
       boolean nc3Mode, Group.Builder groupBuilder, Attributes attributes) {
     String names[] = attributes.getNames();
-    for (int ni = 0; ni < names.length; ni++) {
-      String tName = names[ni];
+    for (String tName : names) {
       if (!String2.isSomething(tName)
           || tName.equals(
               "_NCProperties")) // If I write this, netcdf nc4 code later throws Exception when it
@@ -1152,12 +1095,11 @@ public class NcHelper {
    * @param unsigned If nc3Mode and unsigned, this method adds an _Unsigned=true attribute
    */
   public static void setAttributes(
-      boolean nc3Mode, Variable.Builder var, Attributes attributes, boolean unsigned) {
+      boolean nc3Mode, Variable.Builder<?> var, Attributes attributes, boolean unsigned) {
     String names[] = attributes.getNames();
     if (nc3Mode && unsigned)
       var.addAttribute(newAttribute(nc3Mode, "_Unsigned", new StringArray(new String[] {"true"})));
-    for (int ni = 0; ni < names.length; ni++) {
-      String tName = names[ni];
+    for (String tName : names) {
       if (!String2.isSomething(tName)) continue;
       PrimitiveArray tValue = attributes.get(tName);
       if (tValue == null
@@ -1323,9 +1265,7 @@ public class NcHelper {
     // read the sourcglobalAttributes
     if (ncAtts == null) return;
     String ncAttsName = ncAtts.getName();
-    Iterator it = ncAtts.iterator();
-    while (it.hasNext()) { // there is also a dods.dap.Attribute
-      Attribute att = (Attribute) it.next();
+    for (Attribute att : ncAtts) { // there is also a dods.dap.Attribute
       String name = att.getName();
       attributes.add(name, getAttributePA(ncAttsName, att));
     }
@@ -1399,14 +1339,13 @@ public class NcHelper {
     Attributes gridMappingAtts = new Attributes();
     String[] attNames = sourceAtts.getNames();
     if (attNames.length == 0) return null;
-    for (int an = 0; an < attNames.length; an++) {
-      String attName = attNames[an];
-      boolean keep = true;
-      if ("comment".equals(attName)
-          && sourceAtts.getString(attName).startsWith("This is a container variable")) keep = false;
+    for (String attName : attNames) {
+      boolean keep =
+          !"comment".equals(attName)
+              || !sourceAtts.getString(attName).startsWith("This is a container variable");
       if (!"DODS_strlen".equals(attName) && keep)
         gridMappingAtts.add(
-            "grid_mapping_name".equals(attName) ? attNames[an] : "grid_mapping_" + attName,
+            "grid_mapping_name".equals(attName) ? attName : "grid_mapping_" + attName,
             sourceAtts.get(attName)); // some PA type
     }
     return gridMappingAtts;
@@ -1652,8 +1591,8 @@ public class NcHelper {
         lastRow == -1
             ? getPrimitiveArray(variable)
             : getPrimitiveArray(variable, firstRow, lastRow);
-    if (pa instanceof DoubleArray) {
-      return (DoubleArray) pa;
+    if (pa instanceof DoubleArray dpa) {
+      return dpa;
     }
 
     DoubleArray da = new DoubleArray(pa);
@@ -1843,7 +1782,7 @@ public class NcHelper {
     PrimitiveArray pa = getPrimitiveArray(array);
     Test.ensureEqual(
         pa.size(),
-        nX * nY * nZ * ((long) nT),
+        nX * (long) nY * nZ * ((long) nT),
         "NcHelper.get4DValues nFound!=nExpected.\n"
             + " name="
             + variable.getFullName()
@@ -1875,20 +1814,15 @@ public class NcHelper {
    */
   public static String[] readColumnNames(String fullName) throws Exception {
     String tColumnNames[] = null;
-    NetcdfFile netcdfFile = openFile(fullName);
-    try {
+    try (NetcdfFile netcdfFile = openFile(fullName)) {
       Variable loadVariables[] = findVariables(netcdfFile, null);
       tColumnNames = new String[loadVariables.length];
       for (int i = 0; i < loadVariables.length; i++)
         tColumnNames[i] = loadVariables[i].getFullName();
 
       return tColumnNames;
-    } finally {
-      try {
-        netcdfFile.close(); // make sure it is explicitly closed
-      } catch (Exception e2) {
-      }
     }
+    // make sure it is explicitly closed
   }
 
   /**
@@ -1941,14 +1875,12 @@ public class NcHelper {
       throws Exception {
 
     PAType paType = pa.elementType();
-    if (paType == PAType.CHAR)
+    if (paType == PAType.CHAR) {
       // netcdf-java 3 & 4 just write 1 byte chars
       // (but nc4 will writes strings as utf-8 encoded
       pa = new CharArray(pa).toIso88591();
-    else if (nc3Mode) {
+    } else if (nc3Mode) {
       if (paType == PAType.LONG || paType == PAType.ULONG) pa = new DoubleArray(pa);
-      else if (paType == PAType.CHAR)
-        pa = new CharArray(pa).toIso88591(); // netcdf-java 3 just writes low byte
       else if (paType == PAType.STRING)
         pa = new StringArray(pa).toIso88591(); // netcdf-java 3 just writes low byte
     }
@@ -1965,19 +1897,6 @@ public class NcHelper {
   }
 
   /**
-   * This opens an opendap dataset as a NetcdfDataset. ALWAYS explicitly use netcdfDataset.close()
-   * when you are finished with it, preferably in a "finally" clause.
-   *
-   * @param url This should not include a list of variables (e.g., ?varName,varName) or a constraint
-   *     expression at the end.
-   * @return a NetcdfDataset which is a superclass of NetcdfFile
-   * @throws Exception if trouble
-   */
-  public static NetcdfDataset openOpendapAsNetcdfDataset(String url) throws Exception {
-    return NetcdfDatasets.openDataset(url); // 2021 v5.4.1: 's' is new API
-  }
-
-  /**
    * This determines which rows of an .nc file have testVariables between min and max. This is
    * faster if the first testVariable(s) eliminate a lot of rows.
    *
@@ -1991,8 +1910,6 @@ public class NcHelper {
    */
   public static BitSet testRows(Variable testVariables[], double min[], double max[])
       throws Exception {
-
-    String errorInMethod = String2.ERROR + " in testNcRows: ";
     long time = System.currentTimeMillis();
 
     BitSet okRows = null;
@@ -2064,7 +1981,7 @@ public class NcHelper {
       nc.setFill(false);
 
       // add the variables
-      Variable.Builder newVars[] = new Variable.Builder[nVars];
+      Variable.Builder<?> newVars[] = new Variable.Builder[nVars];
       for (int var = 0; var < nVars; var++) {
         String name = varNames.get(var);
         tpas[var] = pas[var];
@@ -2113,7 +2030,7 @@ public class NcHelper {
             newVars[var].addAttribute(new Attribute("NcHelper", "JSON encoded"));
         } else {
           newVars[var] =
-              NcHelper.addVariable(rootGroup, name, getNc3DataType(type), Arrays.asList(dimension));
+              NcHelper.addVariable(rootGroup, name, getNc3DataType(type), List.of(dimension));
           if (pas[var].elementType() == PAType.CHAR)
             newVars[var].addAttribute(new Attribute("NcHelper", originally_a_CharArray));
         }
@@ -2174,10 +2091,9 @@ public class NcHelper {
         // + " \n  loadVarNames=" + String2.toCSSVString(loadVarNames)
         ;
     varNames.clear();
-    ArrayList<PrimitiveArray> pas = new ArrayList();
+    ArrayList<PrimitiveArray> pas = new ArrayList<>();
     long time = System.currentTimeMillis();
-    NetcdfFile netcdfFile = openFile(fullName);
-    try {
+    try (NetcdfFile netcdfFile = openFile(fullName)) {
       List<Variable> rootGroupVariables = null;
       if (loadVarNames == null) {
         // find variables in the rootGroup
@@ -2232,8 +2148,6 @@ public class NcHelper {
           pas.add(pa);
         }
       }
-    } finally {
-      netcdfFile.close();
     }
 
     int pasSize = pas.size();
@@ -2337,9 +2251,8 @@ public class NcHelper {
     Variable v = nc.findVariable(structureName);
     if (v == null)
       throw new RuntimeException("structureName=" + structureName + " isn't the nc/hdf file.");
-    if (!(v instanceof Structure))
+    if (!(v instanceof Structure s))
       throw new RuntimeException(structureName + " isn't a structure.");
-    Structure s = (Structure) v;
 
     // get structure's dimensions
     List<Dimension> dims = s.getDimensions();
@@ -2366,10 +2279,7 @@ public class NcHelper {
 
     // boolean buildStringsFromChars = false;
     // boolean isUnsigned = false;
-    StructureDataIterator it = s.getStructureIterator();
-    int recNo = 0;
-    boolean done = false;
-    try {
+    try (StructureDataIterator it = s.getStructureIterator()) {
       while (it.hasNext()) {
         StructureData sd = it.next(); // increment structure position
         boolean saveThisOne = true;
@@ -2392,10 +2302,7 @@ public class NcHelper {
             if (!index.incrementSubsetIndex(subsetIndex, tConstraints))
               break; // we got the entire subset
         }
-        recNo++;
       }
-    } finally {
-      it.close();
     }
 
     return pa;
